--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         </header>
     <p>This is my contact page</p>
 
-    <form>
+    <form name="contactDemo" method="POST" data-netlify="true">
         <input type="text" name="name" placeholder="Full Name" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="tel" name="phone_num" placeholder="(555)444-5000"
