--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
                <a href="index.html"><li>Home</li></a>
                <a href="about.html"><li>About</li></a>
                <a href="contact.html"><li>Contact</li></a>
+               <a href="ContactDemo.html"><li>Demo Contact</li></a>
             </ul>
         </nav>
         </header>
