--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
                <a href="index.html"><li>Home</li></a>
                <a href="about.html"><li>About</li></a>
                <a href="contact.html"><li>Contact</li></a>
+               <a href="contactDemo.html"><li>Demo Contact</li></a>
             </ul>
         </nav>
         </header>
