--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            <a href="index.html"><li>Home</li></a>
            <a href="about.html"><li>About</li></a>
            <a href="contact.html"><li>Contact</li></a>
-           <a href="contactDemo.html"><li>Contact2</li></a>
+           <a href="contactDemo.html"><li>Demo Contact</li></a>
         </ul>
     </nav>
     </header>
